discussion/kv_engine/176433/176433_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan config duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Note: this patch includes an unrelated range_scan_create.md fix to
avoid CV on a standalone doc patch.

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-09-01 15:34:49.000000000
Message: 
Uploaded patch set 14: Patch Set 13 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-01 16:49:47.000000000
Message: 
Patch Set 14: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19957/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:186:47: error: use of undeclared identifier "maxScanDuration" [clang-diagnostic-error]
                                taskable, vb, maxScanDuration));
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19957/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19957/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48896/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc(202): error C2059: syntax error: ")" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48896/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41106/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41106/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23011/ : FAILURE

Compile error at [2022-09-01T16:38:24.603Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23011/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30296/ : FAILURE

Compile error at [2022-09-01T16:48:33.053Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30296/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22271/ : FAILURE

Compile error at [2022-09-01T16:48:03.573Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9656/ : FAILURE

Compile error at [2022-09-01T16:40:55.380Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9656/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21230/ : FAILURE

Compile error at [2022-09-01T16:48:40.520Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21230/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21916/ : FAILURE

Compile error at [2022-09-01T16:44:49.424Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21916/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9756/ : FAILURE

Compile error at [2022-09-01T16:00:55.868Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9756/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19178/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
